Adds a whole bunch of things like slack auto inviter, password resets, and more

--- a/app/views/pages/admin.html.slim
+++ b/app/views/pages/admin.html.slim
@@ -4,8 +4,8 @@
   .container.mbg
     .row
       .col-md-8
-        .header
-          h1 Admin Dashboard
+        h1 Admin Dashboard
 
         ul
           li = link_to "Users", admin_users_path
+          li = link_to "Posts", admin_posts_path
