--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -6,8 +6,10 @@
 }
 
 .signup {
-  input:focus,
-  input:active {
+  input[type='email']:focus,
+  input[type='password']:focus,
+  input[type='email']:active,
+  input[type='password']:active {
     box-shadow: 0 2px 11px 0 rgba(255,91,70,0.15);
   }
 
@@ -36,6 +38,7 @@
     letter-spacing: 0.08rem;
     font-weight: 700;
     font-size: 14px;
+    -webkit-font-smoothing: antialiased;
     color: $shaleDark;
   }
 
@@ -46,6 +49,104 @@
     margin-top: 8px;
     margin-bottom: 20px;
   }
+
+
+  checkbox {
+    display: inline-block;
+    // width: 30%;
+    vertical-align: top;
+    margin-top: 4px;
+
+    label {
+      // font-weight: 400;
+      // font-size: 15px;
+      // vertical-align: top;
+      color: #shale;
+    }
+    input {
+      position: absolute;
+      opacity: 0;
+      cursor: pointer;
+      height: 0;
+      width: 0;
+    }
+    .holder {
+      display: block;
+      position: relative;
+      padding-top: 10px;
+      // padding-left: 32px;
+      margin-bottom: 12px;
+      cursor: pointer;
+      -webkit-user-select: none;
+      -moz-user-select: none;
+      -ms-user-select: none;
+      user-select: none;
+    }
+    .checkmark {
+      padding: 3px 12px;;
+      position: relative;
+      top: -0.5px;
+      left: 0;
+      height: 25px;
+      width: 25px;
+      background-color: $white;
+      border-radius: 5px;
+      border: 2px solid $grayLightish;
+    }
+
+    .holder:hover .checkmark{
+      background: $white;
+    }
+
+    .holder input:checked ~ .checkmark {
+      background-color: $jellyGreen;
+      border: 2px solid $jellyGreen;
+    }
+    .holder:hover input ~ .checkmark {
+      border-color: $brandYellow;
+    }
+    .holder:hover input:checked ~ .checkmark {
+      border-color: $jellyGreen;
+    }
+    .checkmark:after {
+      content: "";
+      position: absolute;
+      display: none;
+    }
+    .message:after {
+      content: "woohoo!";
+      position: absolute;
+      color: $shaleLight;
+      font-size: 10px;
+      // display: none;
+      opacity: 0;
+    }
+
+    .holder input:checked ~ .checkmark:after {
+      display: block;
+    }
+    .holder input:checked ~ .message:after {
+      // display: block;
+      opacity: 1;
+      position: relative;
+      left: 10px;
+      top: -2px;
+      transition-duration: 0.3s;
+    }
+    .holder .checkmark:after {
+      left: 8px;
+      top: 4px;
+      width: 7px;
+      height: 12px;
+      border: solid #FFF;
+      border-width: 0px 3px 3px 0px;
+      -webkit-transform: rotate(45deg);
+      -ms-transform: rotate(45deg);
+      transform: rotate(45deg);
+    }
+
+  }
+
 }
 
 .password-resets {
