--- a/app/views/users/new.html.slim
+++ b/app/views/users/new.html.slim
@@ -1,29 +1,34 @@
 .signup
   .container
-    h1 Create an Account
+    .row
+      .col-md-6
+        h1 Join our chat!
+        br
+        p Hello, 
+        p When you sign up, you'll receive an invite to our Slack channel (http://jelly-community.slack.com) and you'll also be logged in to comment on blog posts here!
 
-    p
-      | Already have one? 
-      = link_to "Log in!", login_path
+      .col-md-6
+        = form_for @user do |f|
+          .field
+            label
+              | Email
+              = f.email_field :email, required: true
+          
+          .field
+            label
+              | Password
+              = f.password_field :password, required: true, minlength: 5, maxlength: 300
 
-    = form_for @user do |f|
-      .field
-        label
-          | First Name
-          = f.text_field :first_name, required: true
+          .field.mbg
+            checkbox
+              label
+                | Sign up for our newsletter?
+                .holder
+                  = f.check_box :newsletter_signed_up_at, {}, true, false
+                  span class="checkmark"
+                  span class="message animated fadeIn"
+          
+          .actions
+            = f.submit "Sign Up", class: "btn btn-primary btn-lg mt"
 
-        label
-          | Last Name
-          = f.text_field :last_name, required: true
-
-        label
-          | Email
-          = f.email_field :email, required: true
-      
-      .field
-        label
-          | Password
-          = f.password_field :password, required: true, minlength: 5, maxlength: 300
-      
-      .actions
-        = f.submit "Sign Up", class: "btn btn-primary btn-lg"
+        
