Changes comment path to register

--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -39,4 +39,4 @@
           .actions
             = f.submit "Add Comment", class: "btn btn-primary"
       - else
-        = link_to "Log in to comment", login_path, class: "btn btn-secondary"
+        = link_to "Log in to comment", register_path, class: "btn btn-secondary"
