Fixes user mailer method name

--- a/app/views/user_mailer/welcome.html.slim
+++ b/app/views/user_mailer/welcome.html.slim
@@ -1,3 +1,11 @@
-h1 Hello
+h1 Hello friend,
 
-p Welcome to Science Pizza
+p Welcome to our little website where we're sharing our process of building Jelly Labs.
+
+p We'll be posting things regulary on our website, but also be sure to check out our slack channel for some chatz. 
+
+p http://jelly-community.slack.com
+
+p You should've already got an email invite, but in case you didn't or you just want to shout at us, please go to "www.twitter.com/dennyluan" or "www.twitter.com/cindywu" and yell at us.
+
+p Have a wonderful day!
