--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -4,8 +4,39 @@
 <div class="container">
   <div class="row">
     <div class="home">
+      <div class="header-remove">
+        <h1 class="">
+          Jelly Labs
+        </h1>
+        <p>
+          We're Denny and Cindy, working on building equitable platforms for scientists.
+        </p>
 
-      <div class="header">
+        <div class="block">
+          <a href="https://mailchi.mp/942ff16d32c6/jelly" target="_blank">
+            Sign up for our newsletter
+          </a>
+
+          <div class="social-icons">
+            <span>Join us!</span>
+            <span>
+              <% if current_user %>
+                <a href="http://jelly-community.slack.com"><i class="fa fa-slack mlm"></i></a>
+              <% else %>
+                <a href=<%= register_path %>><i class="fa fa-slack mlm"></i></a>
+              <% end %>
+            </span>
+            <span>
+              <a href="http://twitter.com/jellypbc"><i class="fa fa-twitter mlm"></i></a>
+            </span>
+            <span>
+              <a href="https://gitlab.com/jellylabs/jelly"><i class="fa fa-github mlm"></i></a>
+            </span>
+          </div>
+        </div>
+      </div>
+
+      <div class="header hidden">
         <canvas id='canvas' resize hidpi="off" background="#29D04E">
         </canvas>
         <h1 class="">
