--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -9,9 +9,10 @@ canvas[resize] {
 }
 
 .header-remove {
-  width: 100%;
+  width: auto;
   padding: 32px;
-  margin: 30px 0;
+  margin: 10px;
+  margin-top: 30px;
   display: block;
   z-index: 100;
   border: 5px solid $jellyGreen;
