--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -13,7 +13,7 @@
         </p>
 
         <div class="block">
-          <a href="https://mailchi.mp/942ff16d32c6/jelly" target="_blank">
+          <a href=<%= follow_path %>>
             Sign up for our newsletter
           </a>
 
@@ -23,7 +23,7 @@
               <% if current_user %>
                 <a href="http://jelly-community.slack.com"><i class="fa fa-slack mlm"></i></a>
               <% else %>
-                <a href=<%= register_path %>><i class="fa fa-slack mlm"></i></a>
+                <a href=<%= follow_path %>><i class="fa fa-slack mlm"></i></a>
               <% end %>
             </span>
             <span>
@@ -47,7 +47,7 @@
         </p>
 
         <div class="block">
-          <a href="https://mailchi.mp/942ff16d32c6/jelly" target="_blank">
+          <a href=<%= follow_path %>>
             Sign up for our newsletter
           </a>
 
@@ -57,7 +57,7 @@
               <% if current_user %>
                 <a href="http://jelly-community.slack.com"><i class="fa fa-slack mlm"></i></a>
               <% else %>
-                <a href=<%= register_path %>><i class="fa fa-slack mlm"></i></a>
+                <a href=<%= follow_path %>><i class="fa fa-slack mlm"></i></a>
               <% end %>
             </span>
             <span>
