--- a/app/views/users/new.html.slim
+++ b/app/views/users/new.html.slim
@@ -2,15 +2,24 @@
   .container
     .row
       .col-md-6
-        h1 Join our chat!
+        h1 Create an account
         br
         p Hello friend,
-        p When you sign up, you'll receive an invite to our Slack channel (#{link_to "http://jelly-community.slack.com", "http://jelly-community.slack.com"}) and you'll also be logged in to comment on blog posts here!
+        p Please create an account to comment on blog posts. 
+        p When you sign up, you'll receive an invite to our Slack channel (#{link_to "http://jelly-community.slack.com", "http://jelly-community.slack.com"}).
         p
           | Our Slack has a #{link_to "Code of Conduct", "https://gitlab.com/cindyw/jelly/wikis/Jelly-Community-Slack-Rules"} which you can browse, but please be nice. We are gentle creatures.
 
       .col-md-6
         = form_for @user do |f|
+          .field
+            label
+              | First name
+              = f.text_field :first_name, required: true
+          .field
+            label
+              | Last name
+              = f.text_field :last_name, required: true
           .field
             label
               | Email
