--- a/app/views/pages/admin.html.slim
+++ b/app/views/pages/admin.html.slim
@@ -9,3 +9,4 @@
         ul
           li = link_to "Users", admin_users_path
           li = link_to "Posts", admin_posts_path
+          li = link_to "Newsletter Signups", admin_newsletter_signups_path
