--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -4,7 +4,7 @@
 <div class="container">
   <div class="row">
     <div class="home">
-      <div class="header-remove">
+      <div class="header header-remove">
         <h1 class="">
           Jelly Labs
         </h1>
@@ -13,7 +13,7 @@
         </p>
 
         <div class="block">
-          <a href=<%= follow_path %>>
+          <a class="newsletter" href=<%= follow_path %>>
             Sign up for our newsletter
           </a>
 
@@ -47,7 +47,7 @@
         </p>
 
         <div class="block">
-          <a href=<%= follow_path %>>
+          <a class="newsletter" href=<%= follow_path %>>
             Sign up for our newsletter
           </a>
 
