--- a/app/assets/stylesheets/type.scss
+++ b/app/assets/stylesheets/type.scss
@@ -15,8 +15,6 @@ a:hover {
   animation-iteration-count: infinite;
   animation-duration: .8s;
   text-decoration: none;
-  // transition-duration: 0.2s;
-  // color: darken($jellyGreen, 14);
 }
 
 p, li {
@@ -66,12 +64,27 @@ td { padding: 0 5px 7px; }
     color: #29D06C;
   }
   30% {
-    color: #1AE7E7;
+    color: #00CFE8;
   }
   60% {
     color: #29D0A8;
   }
   100% {
     color: #29D06C;
+  }
+}
+
+@keyframes changeBorderColor {
+  0% {
+    border-bottom: 4px solid #29D06C;
+  }
+  30% {
+    border-bottom: 4px solid #00CFE8;
+  }
+  60% {
+    border-bottom: 4px solid #29D0A8;
+  }
+  100% {
+    border-bottom: 4px solid #29D06C;
   }
 }
