--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -48,6 +48,26 @@
     width: 100%;
     margin-top: 8px;
     margin-bottom: 20px;
+    font-size: 18px;
+  }
+
+  input[type='submit'] {
+    width: 100%;
+  }
+
+  .smol-form input {
+    padding: 11px 14px;
+    display: inline-block;
+    width: 69%;
+    margin-top: 0px;
+    margin-bottom: 20px;
+    margin-right: 5px;
+    font-size: 18px;
+    vertical-align: top;
+  }
+
+  .smol-form input[type='submit'] {
+    width: 25%;
   }
 
 
