--- a/app/assets/stylesheets/shared/_nav.scss
+++ b/app/assets/stylesheets/shared/_nav.scss
@@ -33,8 +33,8 @@ nav {
       font-size: 15px;
       text-align: right;
       letter-spacing: -.1px;
-      width: auto;
-      min-width: 179px;
+      width: max-content !important;
+      // min-width: 179px;
       padding-bottom: 0px;
       border-bottom: 4px solid $jellyGreen;
       position: relative;
