--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -30,7 +30,7 @@
               <a href="http://twitter.com/jellypbc"><i class="fa fa-twitter mlm"></i></a>
             </span>
             <span>
-              <a href="https://gitlab.com/jellylabs/jelly"><i class="fa fa-github mlm"></i></a>
+              <a href="https://github.com/jellypbc"><i class="fa fa-github mlm"></i></a>
             </span>
           </div>
         </div>
@@ -64,7 +64,7 @@
               <a href="http://twitter.com/jellypbc"><i class="fa fa-twitter mlm"></i></a>
             </span>
             <span>
-              <a href="https://gitlab.com/jellylabs/jelly"><i class="fa fa-github mlm"></i></a>
+              <a href="https://github.com/jellypbc"><i class="fa fa-github mlm"></i></a>
             </span>
           </div>
         </div>
